Fix shifting and refreshing